[package]
name = "bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
shared = { path = "../shared" }
column = { path = "../column" }
old = { path = "../old" }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
shared = { path = "../shared" }
column = { path = "../column" }
old = { path = "../old" }

[[bench]]
name = "my_bench"
harness = false


